# osprey

./: .gitignore  Cargo.toml  Dioxus.toml  bun.lockb  flake.nix  justfile  package.json  tailwind.config.js
assets/: tailwind.css
src/: main.rs
src/bridge/: config.rs  context.rs  mod.rs  subscription.rs  target.rs
src/components/: mod.rs  modal.rs  navbar.rs  spinner.rs  stat.rs  toast.rs
src/server/: config.rs  context.rs  launch.rs  logger.rs  management.rs  message.rs  mod.rs  subscription.rs  target.rs  task.rs
src/utils/: time.rs  url.rs
src/views/: home.rs  mod.rs  subscriptions.rs
