[package]
name = "osprey"
version = "0.1.0"
authors = ["j4ger <xiayuxuan@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
figment = { version = "0.10", features = ["toml", "env"], optional = true }
reqwest = { version = "0.12.9", optional = true }
rss = { version = "2.0", optional = true }
anyhow = "1.0"
chrono = { version = "0.4.39", optional = true }
toml = { version = "0.8.19", optional = true }

[features]
server = [
    "dioxus/server",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:serde",
    "dep:figment",
    "dep:reqwest",
    "dep:rss",
    "dep:chrono",
    "dep:toml",
]
default = ["web", "server"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
